--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "smart-host"
 version = "0.1.0"
 requires-python = ">=3.10"
+dependencies = [
+    "fastapi",
+    "sqlalchemy",
+]
